# neuro_social_simulation_engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: main.py  models.py  pyproject.toml
backend/simulation/: engine.py  mock_neural.py  mock_swarm.py
backend/tests/: conftest.py  test_api.py  test_engine.py  test_manager.py  test_mock_neural.py  test_mock_swarm.py  test_models.py
backend/ws/: manager.py
docker/: serve.py
docs/: api_reference.md  architecture.md  medium_article_draft.md  ml_integration_guide.md  social_posts_draft.md  websocket_protocol.md
docs/screenshots/: README.md
frontend/: index.html  package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  setupTests.js
frontend/src/components/: ControlPanel.jsx  HUD.jsx  SwarmVisualizer.jsx
frontend/src/components/__tests__/: ControlPanel.test.jsx  HUD.test.jsx  SwarmVisualizer.test.jsx
frontend/src/hooks/: useSimulationSocket.js
frontend/src/hooks/__tests__/: useSimulationSocket.test.js
frontend/src/store/: simulationStore.js
frontend/src/store/__tests__/: simulationStore.test.js
