[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuro-social-simulation-engine"
version = "0.1.0"
description = "FastAPI microservice bridging in-silico neuroscience with social swarm simulation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
ml = [
    # Uncomment to enable real ML inference (TRIBE v2 / GNN swarm model)
    # "torch>=2.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio[trio]>=4",
    "websockets>=12",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
